fix: Flex调整direction参数,Tooltip 添加visible参数

--- a/src/styles/components/flex.less
+++ b/src/styles/components/flex.less
@@ -5,13 +5,13 @@
   &-row {
     flex-direction: row;
   }
-  &-col {
+  &-column {
     flex-direction: column;
   }
   &-row-reverse {
     flex-direction: row-reverse;
   }
-  &-col-reverse {
+  &-column-reverse {
     flex-direction: column-reverse;
   }
   &-wrap {
